step 6. Add bootstrap and modal window

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,11 @@ body {
 .form-floating {
     margin-bottom: 1rem;
 }
+
+.preview-btn {
+    margin-left: 10px;
+}
+
+.fw-bold {
+    color: #0d6efd;
+}
